--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,35 +2,33 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Build the Docker image
-      run: docker build . --file ./Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
-    - name: Push the Docker image to DockerHub
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
-    - name: Deploy to EC2
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_PRIVATE_KEY }}
-        script: |
-          docker pull ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
-          docker stop arkavidia-final-project
-          docker rm arkavidia-final-project
-          docker run -d -p 3000:3000 --name arkavidia-final-project-frontend ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
-      
+      - uses: actions/checkout@v4
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build the Docker image
+        run: docker build . --file ./Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
+      - name: Push the Docker image to DockerHub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
+          script: |
+            docker pull ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
+            docker stop arkavidia-final-project-frontend
+            docker rm arkavidia-final-project-frontend
+            docker run -d -p 3000:3000 --name arkavidia-final-project-frontend ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
