--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,3 +32,4 @@ jobs:
             docker stop arkavidia-final-project-frontend
             docker rm arkavidia-final-project-frontend
             docker run -d -p 3000:3000 --name arkavidia-final-project-frontend ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
+            docker image prune
