--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,19 +48,6 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            docker compose -f down
-            docker compose -f up -d
+            docker compose down
+            docker compose up -d
             docker image prune -f
-
-      # - name: Deploy to EC2
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.EC2_HOST }}
-      #     username: ${{ secrets.EC2_USER }}
-      #     key: ${{ secrets.EC2_PRIVATE_KEY }}
-      #     script: |
-      #       docker pull ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
-      #       docker stop arkavidia-final-project-frontend
-      #       docker rm arkavidia-final-project-frontend
-      #       docker run -d -p 3000:3000 --name arkavidia-final-project-frontend ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
-      #       docker image prune -f
