--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,6 +48,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
+            docker pull ${{ secrets.DOCKER_USERNAME }}/arkavidia-final-project-frontend:latest
             docker compose down
             docker compose up -d
             docker image prune -f
